syntax = "proto3";

option go_package = "sharded_lock_service/pkg/lockserver";

package lockserver;

import "google/protobuf/empty.proto";

service LockService {
    rpc Acquire (AcquireLocksInfo) returns (Success) {}
    rpc Release (ReleaseLocksInfo) returns (Success) {}
    rpc Heartbeat (HeartbeatInfo) returns (Success) {}
    rpc Ping (PingRequest) returns (Success) {}
}

message AcquireLocksInfo {
    string clientId = 1;
    repeated string readKeys = 2;
    repeated string writeKeys = 3;
    bool isKeeper = 4;
}

message ReleaseLocksInfo {
    string clientId = 1;
    repeated string readKeys = 2;
    repeated string writeKeys = 3;
}

message HeartbeatInfo {
    string clientId = 1;
}

message Heartbeat {
    string clientId = 1;
}

message PingRequest {
    string clientId = 1;
}

message Success {
    bool flag = 1;
}